--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "4.0.18",
     "@vitest/ui": "4.0.18",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
